--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.0.0",
+    "@angular/material-moment-adapter": "^16.0.0",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
@@ -32,6 +33,8 @@
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/moment-hijri": "^2.1.0",
+    "@types/moment-jalaali": "^0.7.6",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
